--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <th>Mes</th>
             <th>Usuarios</th>
             <th>Ingreso</th>
-            <th>ingreso SimpleGo</th>
+            <th>ingreso por GustitosGo</th>
             <th>SimpleGo Fee</th>
             <th>% Crecimiento</th>
         </tr>
