--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <input type="number" id="ticketPromedio" required>
     </div>
     <div class="form-group">
-      <label for="feeSimpleGo">Fee GustitosGo (%):</label>
+      <label for="feeSimpleGo">Fee Go (%):</label>
       <input type="number" id="feeSimpleGo" value="15" required>
     </div>
     
@@ -43,8 +43,8 @@
             <th>Mes</th>
             <th>Usuarios</th>
             <th>Ingreso</th>
-            <th>ingreso por GustitosGo</th>
-            <th>SimpleGo Fee</th>
+            <th>ingreso por Go</th>
+            <th>Go Fee</th>
             <th>% Crecimiento</th>
         </tr>
     </thead>
