--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <th>Mes</th>
             <th>Usuarios</th>
             <th>Ingreso</th>
-            <th>ingreso por Go</th>
+            <th>Ingreso por Go</th>
             <th>Go Fee</th>
             <th>% Crecimiento</th>
         </tr>
