--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <input type="number" id="ticketPromedio" required>
     </div>
     <div class="form-group">
-      <label for="feeSimpleGo">Fee Go (%):</label>
+      <label for="feeSimpleGo">Go Fee(%):</label>
       <input type="number" id="feeSimpleGo" value="15" required>
     </div>
     
