--- a/index.html
+++ b/index.html
@@ -3,48 +3,55 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>GustitosGo Fee Forecast</title>
+  <title>SimpleGo Fee Calculator</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.5.0-beta4/html2canvas.min.js"></script>
-
 </head>
 <body>
-  <form id="inputForm">
-    <img src="https://i.postimg.cc/wM7CGnfW/gustitos-logo-042dcf49.png" alt="Logo" id="logo">
-    <div class="form-group">
-      <label for="usuarioMes1">Usuarios mes 1:</label>
-      <input type="number" id="usuarioMes1" value="100" required>
-    </div>
-    <div class="form-group">
-      <label for="crecimiento">Crec. usuarios MoM (%):</label>
-      <input type="number" id="crecimiento" value="18" required>
-    </div>
-    <div class="form-group">
-      <label for="ticketPromedio">Ticket Promedio:</label>
-      <input type="number" id="ticketPromedio" required>
-    </div>
-    <div class="form-group">
-      <label for="feeSimpleGo">Go Fee(%):</label>
-      <input type="number" id="feeSimpleGo" value="15" required>
-    </div>
-    
-    <div class="button-container">
-        <button type="submit">Calcular</button>
-    </div>
 
-  </form>
+  <div id="password-group">
+    <label for="password">Contraseña:</label>
+    <input type="password" id="password">
+    <button onclick="checkPassword()">Acceder</button>
+  </div>
+  
+  <div id="input-form">
+    <form id="inputForm">
+      <img src="https://i.postimg.cc/wM7CGnfW/gustitos-logo-042dcf49.png" alt="Logo" id="logo">
+      <div class="form-group">
+        <label for="usuarioMes1">Usuarios mes 1:</label>
+        <input type="number" id="usuarioMes1" value="100" required>
+      </div>
+      <div class="form-group">
+        <label for="crecimiento">Crec. usuarios MoM (%):</label>
+        <input type="number" id="crecimiento" value="18" required>
+      </div>
+      <div class="form-group">
+        <label for="ticketPromedio">Ticket Promedio:</label>
+        <input type="number" id="ticketPromedio" required>
+      </div>
+      <div class="form-group">
+        <label for="feeSimpleGo">Fee SimpleGo (%):</label>
+        <input type="number" id="feeSimpleGo" value="15" required>
+      </div>
+      
+      <div class="button-container">
+          <button type="submit">Calcular</button>
+      </div>
+    </form>
+  </div>
+
   <div class="container">
     <canvas id="myChart" hidden width="1200" height="800"></canvas>
-
     <table id="resultsTable" hidden>
       <thead>
         <tr>
             <th>Mes</th>
             <th>Usuarios</th>
             <th>Ingreso</th>
-            <th>Ingreso por Go</th>
-            <th>Go Fee</th>
+            <th>ingreso SimpleGo</th>
+            <th>SimpleGo Fee</th>
             <th>% Crecimiento</th>
         </tr>
     </thead>
@@ -62,7 +69,7 @@
         <tbody id="investmentBody"></tbody>
         </table>
     </div>
-</div>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
