--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SimpleGo Fee Calculator</title>
+  <title>GustitosGo Fee Forecaster</title>
   <link rel="stylesheet" href="style.css">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.5.0-beta4/html2canvas.min.js"></script>
@@ -32,7 +32,7 @@
         <input type="number" id="ticketPromedio" required>
       </div>
       <div class="form-group">
-        <label for="feeSimpleGo">Fee SimpleGo (%):</label>
+        <label for="feeSimpleGo">Go Fee (%):</label>
         <input type="number" id="feeSimpleGo" value="15" required>
       </div>
       
@@ -50,8 +50,8 @@
             <th>Mes</th>
             <th>Usuarios</th>
             <th>Ingreso</th>
-            <th>ingreso SimpleGo</th>
-            <th>SimpleGo Fee</th>
+            <th>Ingreso Go</th>
+            <th>Go Fee</th>
             <th>% Crecimiento</th>
         </tr>
     </thead>
