--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <th>Mes</th>
             <th>Usuarios</th>
             <th>Ingreso</th>
-            <th>Ingreso Go</th>
+            <th>Ingreso por Go</th>
             <th>Go Fee</th>
             <th>% Crecimiento</th>
         </tr>
